Оптимизировал работу с SVG-иконками, переведя их на использование спрайтов

--- a/src/assets/style/catalog.scss
+++ b/src/assets/style/catalog.scss
@@ -96,6 +96,10 @@
   justify-content: stretch;
   position: relative;
   overflow: hidden;
+
+  img {
+    cursor: pointer;
+  }
 }
 .star-icon {
   position: absolute;
